syntax = "proto3";
package protos.connectors.assets;

import "google/protobuf/wrappers.proto";
import "protos/base.proto";
import "protos/connectors/connector.proto";
import "protos/connectors/assets/asset.proto";

message GetConnectorsAssetsModelsOptionsRequest {
  Meta meta = 1;
  Source connector_type = 2;
  google.protobuf.UInt64Value connector_id = 3;
  SourceModelType model_type = 4;
}

message GetConnectorsAssetsModelsOptionsResponse {
  Meta meta = 1;
  google.protobuf.BoolValue success = 2;
  Message message = 3;
  repeated AccountConnectorAssetsModelOptions asset_model_options = 4;
}

message GetConnectorsAssetsModelsRequest {
  Meta meta = 1;
  google.protobuf.UInt64Value connector_id = 2;
  Source connector_type = 3;
  SourceModelType type = 4;
  AccountConnectorAssetsModelFilters filters = 5;
}

message GetConnectorsAssetsModelsResponse {
  Meta meta = 1;
  google.protobuf.BoolValue success = 2;
  Message message = 3;
  repeated AccountConnectorAssets assets = 4;
}

message GetConnectorsAssetsModelsV2Request {
  Meta meta = 1;
  Connector connector = 2;
  SourceModelType type = 3;
  AccountConnectorAssetsModelFilters filters = 4;
}

message GetConnectorsAssetsModelsV2Response {
  Meta meta = 1;
  google.protobuf.BoolValue success = 2;
  Message message = 3;
  repeated AccountConnectorAssets assets = 4;
}

message GetConnectorsAssetsModelsRefreshRequest {
  Meta meta = 1;
  google.protobuf.UInt64Value connector_id = 2;
}

message GetConnectorsAssetsModelsRefreshResponse {
  Meta meta = 1;
  google.protobuf.BoolValue success = 2;
  Message message = 3;
}